--- a/main.css
+++ b/main.css
@@ -1,3 +1,38 @@
+body { 
+  background: url(water.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: acumin-pro, sans-serif;
+  font-weight: 100;
+  font-style: normal;
+  color: #025479; 
+}
+
+h1 {
+  font-family: gravesend-sans, sans-serif;
+  font-weight: 900;
+  font-style: normal;
+  color: #025479;
+  font-size: 2rem; 
+}
+
+h2 {
+  font-family: gravesend-sans, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  color: #025479; 
+}
+
+.container {
+  width: 80%; 
+  background-color: white;
+  margin: 50px auto; 
+  text-align: center;
+  opacity: .75;
+  padding: 20px 0; 
+}
 
 .hide {
   opacity: 0;
@@ -5,4 +40,14 @@
 .show {
   opacity: 1;
   transition: opacity 1s;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  padding-bottom: 25px; 
+}
+
+footer h2 {
+  color: white; 
 }
